Addition of an IconProvider
Signed-off-by: clinique <gael@lhopital.org>